--- a/index.html
+++ b/index.html
@@ -646,13 +646,17 @@ a4 { font-weight:bold;
 	</div>
 
 <!--방향 -->
+<a href="https://seoojing.github.io/outt/">		
 	<div id="fronts">
 		<img src="there.png">
 	</div>
-
+</a>
+<a href="https://seoojing.github.io/elevator/">
 	<div id="turn">
 		<img src="turn.png">
 	</div>
+		</a>		
+		
 	<div id="lefi">
 		<img src="here.png">
 	</div>
